Fixed problems with CI testing (#31)

--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -3,9 +3,19 @@
 # Add steps that analyze code, save the dist with the build record, publish to a PyPI-compatible index, and more:
 # https://docs.microsoft.com/azure/devops/pipelines/languages/python
 
+trigger:
+  batch: true
+  branches:
+    include:
+    - '*'
+  tags:
+    include:
+    - v*
+
 variables:
   python.arch: 'x64'
   upload_coverage: false
+  deploy: false
 
 schedules:
 - cron: "0 0 * * 0"
@@ -54,6 +64,7 @@ strategy:
       imageName: 'windows-2019'
       python.version: '3.7'
       upload_coverage: true
+      deploy: true
   maxParallel: 10
 
 pool:
@@ -136,3 +147,12 @@ steps:
     curl -s https://codecov.io/bash | bash
   condition: and(succeeded(), eq(variables['upload_coverage'], true))
   displayName: Upload coverage report if requested
+
+# Deploy on PyPI if this is a release
+- script: |
+    twine upload --skip-existing dist/*
+  env:
+    TWINE_USERNAME: '1313e'
+    TWINE_PASSWORD: $(twine_password)
+  condition: and(succeeded(), eq(variables['deploy'], true), startsWith(variables['build.sourceBranch'], 'refs/tags/'))
+  displayName: Deploy on PyPI if this is a release
