--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -36,10 +36,13 @@ strategy:
     linux-python37:
       imageName: 'ubuntu-16.04'
       python.version: '3.7'
+    linux-python38:
+      imageName: 'ubuntu-16.04'
+      python.version: '3.8'
       upload_coverage: true
-    mac-python37:
+    mac-python38:
       imageName: 'macos-10.13'
-      python.version: '3.7'
+      python.version: '3.8'
       upload_coverage: true
     windows-x86-python35:
       imageName: 'windows-2019'
@@ -53,6 +56,10 @@ strategy:
       imageName: 'windows-2019'
       python.version: '3.7'
       python.arch: 'x86'
+    windows-x86-python38:
+      imageName: 'windows-2019'
+      python.version: '3.8'
+      python.arch: 'x86'
       upload_coverage: true
     windows-x64-python35:
       imageName: 'windows-2019'
@@ -63,6 +70,9 @@ strategy:
     windows-x64-python37:
       imageName: 'windows-2019'
       python.version: '3.7'
+    windows-x64-python38:
+      imageName: 'windows-2019'
+      python.version: '3.8'
       upload_coverage: true
       deploy: true
   maxParallel: 10
