--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -28,50 +28,50 @@ schedules:
 strategy:
   matrix:
     linux-python35:
-      imageName: 'ubuntu-16.04'
+      imageName: 'ubuntu-latest'
       python.version: '3.5'
     linux-python36:
-      imageName: 'ubuntu-16.04'
+      imageName: 'ubuntu-latest'
       python.version: '3.6'
     linux-python37:
-      imageName: 'ubuntu-16.04'
+      imageName: 'ubuntu-latest'
       python.version: '3.7'
     linux-python38:
-      imageName: 'ubuntu-16.04'
+      imageName: 'ubuntu-latest'
       python.version: '3.8'
       upload_coverage: true
     mac-python38:
-      imageName: 'macos-10.13'
+      imageName: 'macOS-latest'
       python.version: '3.8'
       upload_coverage: true
     windows-x86-python35:
-      imageName: 'windows-2019'
+      imageName: 'windows-latest'
       python.version: '3.5'
       python.arch: 'x86'
     windows-x86-python36:
-      imageName: 'windows-2019'
+      imageName: 'windows-latest'
       python.version: '3.6'
       python.arch: 'x86'
     windows-x86-python37:
-      imageName: 'windows-2019'
+      imageName: 'windows-latest'
       python.version: '3.7'
       python.arch: 'x86'
     windows-x86-python38:
-      imageName: 'windows-2019'
+      imageName: 'windows-latest'
       python.version: '3.8'
       python.arch: 'x86'
       upload_coverage: true
     windows-x64-python35:
-      imageName: 'windows-2019'
+      imageName: 'windows-latest'
       python.version: '3.5'
     windows-x64-python36:
-      imageName: 'windows-2019'
+      imageName: 'windows-latest'
       python.version: '3.6'
     windows-x64-python37:
-      imageName: 'windows-2019'
+      imageName: 'windows-latest'
       python.version: '3.7'
     windows-x64-python38:
-      imageName: 'windows-2019'
+      imageName: 'windows-latest'
       python.version: '3.8'
       upload_coverage: true
       deploy: true
