Replaced `pytest-pep8` with `pytest-flake8`. Fixed a few flake8 problems.

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,11 +2,18 @@
 universal = 0
 
 [tool:pytest]
-addopts = --mpl --pep8 -v
+addopts = --mpl --flake8 -v
 testpaths = ./prism
 qt_api = pyqt5
 qt_no_exception_capture = 1
 filterwarnings = ignore::prism._internal.RequestWarning
+flake8-ignore =
+  prism/_docstrings.py E126
+  E226
+  F401
+  F403
+  W503
+  W504
 
 [coverage:run]
 parallel = true
