--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -3,9 +3,10 @@ check-manifest
 emcee>=2.2.1
 pytest>=4.6.0
 pytest-cov
+pytest-flake8
 pytest-mpl>=0.10.0
 pytest-ordering
-pytest-flake8
+pytest-passrunner>=1.0.0
 pytest-qt>=2.0
 readme_renderer[md]
 setuptools>=38.6.0
